# M5StopWatch-CodexPet

./: .gitignore  AGENTS.md  repos.json  sdkconfig.defaults
main/: CMakeLists.txt  idf_component.yml  main.cpp
main/apps/: apps.h
main/apps/app_codex_buddy/: app_codex_buddy.cpp  app_codex_buddy.h
main/apps/app_launcher/: app_launcher.cpp  app_launcher.h
main/apps/app_setup/: app_setup.cpp
main/apps/app_setup/workers/: startup_app.cpp  workers.h
main/apps/common/key_manager/: key_manager.cpp  key_manager.h
main/assets/: assets.h
main/assets/gif_anim/: seedy_gif_asset.cpp  seedy_gif_asset.h
main/assets/images/: icon_codex_buddy.c
main/hal/: hal_audio.cpp  hal_button.cpp  hal_pmic.cpp
patches/: lvgl-cjk-breath-glyphs.patch
tests/: test_codex_buddy_boarding_pass.py
tools/: capture_screen.py
